// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AnalysisRows /> > renders correctly 1`] = `
<Fragment>
  <JobArgsRow
    title="Sample"
  >
    <Link
      to="/samples/bar"
    >
      bar
    </Link>
  </JobArgsRow>
  <JobArgsRow
    title="Analysis"
  >
    <Link
      to="/samples/bar/analyses/foo"
    >
      foo
    </Link>
  </JobArgsRow>
</Fragment>
`;

exports[`<BuildIndexRows /> > renders correctly 1`] = `
<Fragment>
  <JobArgsRow
    title="Reference"
  >
    <Link
      to="/refs/foo"
    >
      foo
    </Link>
  </JobArgsRow>
  <JobArgsRow
    title="Index"
  >
    <Link
      to="/refs/foo/indexes/bar"
    >
      bar
    </Link>
  </JobArgsRow>
</Fragment>
`;

exports[`<CreateSampleRows /> > renders correctly 1`] = `
<JobArgsRow
  title="Sample"
>
  <Link
    to="/samples/foo"
  >
    foo
  </Link>
</JobArgsRow>
`;

exports[`<CreateSubtractionRows /> > renders correctly 1`] = `
<JobArgsRow
  title="Subtraction"
>
  <Link
    to="/subtractions/foo"
  >
    foo
  </Link>
</JobArgsRow>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p aodp 1`] = `
<AnalysisRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p build_index 1`] = `
<BuildIndexRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p create_sample 1`] = `
<CreateSampleRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p create_subtraction 1`] = `
<CreateSubtractionRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p nuvs 1`] = `
<AnalysisRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p pathoscope_bowtie 1`] = `
<AnalysisRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<JobArgs /> > renders <JobArgsRows /> correctly when workflow is %p update_sample 1`] = `
<UpdateSampleRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<UpdateSampleRows /> > renders correctly 1`] = `
<JobArgsRow
  title="Subtraction"
>
  <Link
    to="/samples/foo"
  >
    foo
  </Link>
</JobArgsRow>
`;
